Bugfix Footer Spacing

--- a/wp-content/themes/sanpool/dev-assets/css/src/footer.scss
+++ b/wp-content/themes/sanpool/dev-assets/css/src/footer.scss
@@ -77,7 +77,7 @@
 			display: block;
 		}
 		.footer-menu {
-			margin-top: 25px;
+			margin-top: 35px;
 			ul {
 				li {
 					a {
