--- a/wp-content/themes/sanpool/dev-assets/css/theme.css
+++ b/wp-content/themes/sanpool/dev-assets/css/theme.css
@@ -11825,7 +11825,7 @@ button:focus {
     display: block;
   }
   #siteFooter .footer-menu {
-    margin-top: 25px;
+    margin-top: 35px;
   }
   #siteFooter .footer-menu ul li a {
     font-size: 1.25rem;
